Fixed the display width on mobile

--- a/css/creative.css
+++ b/css/creative.css
@@ -427,6 +427,7 @@ body {
     }
     .header_halftext {
        display: block;
+       line-height: 80%;
     }
 }
 
